# Diabetes-Prediction

./: .env  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
data/cleaned/: cleaned_1.csv
data/preprocessed/: train_label_preprocessed.csv  validation_label_preprocessed.csv  validation_preprocessed.csv
data/raw/: cleaned_1.csv
data/split/: test.csv  train.csv  validation.csv
models/: LR_model.pkl  RF_model.pkl  SVM_model.pkl  xgb_model.pkl
notebooks/: mlflow.db
notebooks/EDA/: eda.ipynb
notebooks/Transformation/: preprocessor.pkl  split-data.ipynb  transformation.ipynb
notebooks/class_imbalance/: class_imbalance.ipynb
notebooks/cleaning/: cleaning.ipynb
notebooks/model_building/: KNN.ipynb  LR_XGB.ipynb  LightGBM.ipynb  Random_Forest.ipynb  SVM.ipynb  metrics.ipynb
notebooks/modeling/: catboost.ipynb  decision_tree.ipynb
notebooks/validation/: basic_validations.ipynb  distribution.ipynb  relationships.ipynb
src/diabetes_prediction/api/: llm.py  main.py  schemas.py
src/diabetes_prediction/cleaning/: cleaning.py
src/diabetes_prediction/imbalance/: imbalance.py
src/diabetes_prediction/pipeline/: pipeline.py  predict_one_sample.py  test.py
src/diabetes_prediction/selection/: selection.py
src/diabetes_prediction/transformation/: transformation.py
tests/: test_data_cleaning.py  test_imbalance.py  test_pipeline.py  test_selection.py  test_transformation.py  test_validation.py
ui/: app.py
ui/dashboard/: kpi.py  main_chart.py  subplots.py
ui/form/: form.py
(+1 files in other folders)
