[project]
name = "diabetes_prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "engseif",email = "eng.seifmohamed2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "great-expectations (>=1.15.1,<2.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "google-genai (>=1.74.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.poetry]
packages = [{include = "diabetes_prediction", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
